<resources>
    <string name="app_name">MyRestaurants</string>
    <string name="button">Button</string>
    <string name="my_restaurants">My Restaurants</string>
    <string name="find_restaurants">Find Restaurants</string>
    <string name="android_developer">Android Developer</string>
    <string name="enter_zip_code">Enter Zip Code</string>
    <string name="restaurants_near">Restaurants near</string>
    <string name="by_gideon_muriithi">By Gideon Muriithi</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="one_cuisine_type">One Cuisine Type</string>
    <string name="rating">Rating</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_503_223_1282">(503) 223-1282</string>
    <string name="view_on_yelp">View on Yelp</string>
    <string name="brunch_american">Brunch, American</string>
    <string name="_4_5_5">4.5/5</string>
    <string name="save_restaurant">Save Restaurant</string>
    <string name="_123_sw_best_ever_ave_portland_oregon_97222">123 SW Best Ever Ave. Portland, Oregon, 97222</string>
    <string name="saved_restaurants">Saved Restaurants</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account_log_in_here">Already have an account? Log in here!</string>
    <string name="log_in">Log in</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up_here">Don\'t have an account? Sign up here!</string>
    <string name="search">Search</string>
    <string name="logout">Logout</string>
    <string name="my_restaurants_by_gideon">My Restaurants By Gideon</string>
</resources>